<resources>
    <string name="app_name">Aditya Service Connect</string>
    <string name="enter_your_registration_number">Enter your registration number</string>
    <string name="btn_register">Register</string>
    <string name="by">by</string>
    <string name="made_with">Made with</string>
    <string name="todo">TODO</string>
    <string name="registration_number">Registration number</string>
    <string name="password">Password</string>
    <string name="stay_logged_in">Stay logged in</string>
    <string name="login">Login</string>
    <string name="title_activity_home_page">Aditya Service Connect</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="rules_regulations"><![CDATA[Rules & Regulations]]></string>
    <string name="submit">Submit</string>
    <string name="remarks">Remarks</string>
    <string name="excellent">Excellent</string>
    <string name="good">Good</string>
    <string name="average">Average</string>
    <string name="item_name">Item Name</string>
    <string name="_3_idli_with_sambar">3.Idli with Sambar</string>
    <string name="_2_bread_with_jam_conflakes_with_milk">2.Bread With Jam / Conflakes With Milk</string>
    <string name="_1_boiled_egg">1.Boiled Egg</string>
    <string name="north_canteen_breakfast_feedback">North Canteen Breakfast Feedback</string>
    <string name="_4_two_chutneys">4.Two Chutneys</string>
    <string name="_5_any_1_indian_breakfast">5.Any 1 Indian Breakfast</string>
    <string name="_6_tea_milk">6.Tea / Milk</string>
    <string name="_6_curd">6.Curd</string>
    <string name="_5_sambar_rasam">5.Sambar / Rasam</string>
    <string name="_4_dall">4.Daal</string>
    <string name="_3_wet_curry">3.Wet Curry</string>
    <string name="_2_dry_curry">2.Dry Curry</string>
    <string name="_1_plain_rice">1.Plain Rice</string>
    <string name="north_canteen_dinner_feedback">North Canteen Dinner Feedback</string>
    <string name="_7_fresh_chutney">7.Fresh Chutney</string>
    <string name="_8_papad_salt_chillies">8.Papad / Salt Chillies</string>
    <string name="_9_roti">9.Roti</string>
    <string name="write_your_problem_description">Write your problem description</string>
    <string name="change">Change</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="show">SHOW</string>
    <string name="north_canteen_evening_snacks">North Canteen Evening Snacks</string>
    <string name="_1_any_1_snack_item">1.Any 1 Snack item</string>
    <string name="_2_tea_milk">2.Tea / Milk</string>
    <string name="north_canteen_lunch_feedback">North Canteen Lunch Feedback</string>
    <string name="_4_wet_curry">4.Wet Curry</string>
    <string name="_3_dall">3.Daal</string>
    <string name="_9_sweet">9.Sweet</string>
    <string name="_10_roti">10.Roti</string>
    <string name="south_canteen_breakfast_feedback">South Canteen Breakfast Feedback</string>
    <string name="_2_idli_with_sambar">2.Idli with Sambar</string>
    <string name="_3_two_chutneys">3.Two Chutneys</string>
    <string name="_4_any_1_indian_breakfast">4.Any 1 Indian Breakfast</string>
    <string name="_5_tea_milk">5.Tea / Milk</string>
    <string name="south_canteen_dinner_feedback">South Canteen Dinner Feedback</string>
    <string name="south_canteen_evening_snacks_feedback">South Canteen Evening Snacks Feedback</string>
    <string name="doctor_timings">Doctor Timings</string>
    <string name="gym_timings">Gym Timings</string>
    <string name="computer_lab_timings">Computer Lab Timings</string>
    <string name="_05_00_pm_to_10_00_pm">05:00 PM to 10:00 PM</string>
    <string name="_05_00_am_to_07_00_am">05:00 AM to 07:00 AM</string>
    <string name="_05_00_pm_to_05_30_pm_boys_hostel">05:00 PM to 05:30 PM (Boys Hostel)</string>
    <string name="_04_30_pm_to_5_00_pm_girls_hostel">04:30 PM to 5:00 PM (Girls Hostel)</string>
    <string name="change_password">Change Password</string>
    <string name="change_contact_number">Change Contact Number</string>
    <string name="my_details">My Details</string>
    <string name="developed_by">Developed By</string>
    <string name="logout">Logout</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="timings">Timings</string>
    <string name="description">Description</string>
    <string name="code">Code</string>
    <string name="date">Date</string>
</resources>
