<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="technicalhub.io.purshotam.adityahostelapp.RegisterPage">

    <!--TextView for given text  -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/aditya_logo"
            android:layout_centerInParent="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/enter_your_registration_number"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </RelativeLayout>


    <!-- EditText for writing the registration number -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">
        <EditText
            android:id="@+id/editText_registartionNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/registration_number"
            android:inputType="textCapCharacters"
            android:textAlignment="center"
            android:padding="5dp"
            android:background="@drawable/et_background"
            android:maxLength="10"/>
    </RelativeLayout>


    <!-- Button for register request -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_register"
            android:textAllCaps="false"
            android:background="@drawable/btn_background"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:onClick="Register"
            android:textColor="@color/white"/>
    </RelativeLayout>


    <!-- Bottom strip -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/stripActivityAlerts"
        android:orientation="horizontal"
        android:background="@color/colorAccent"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/made_with"
            android:textSize="16sp"
            android:textColor="@color/white" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/love"
            android:padding="5dp"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by"
            android:textSize="16sp"
            android:textColor="@color/white" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/thubActivityAlerts"
            android:src="@drawable/thub"
            android:contentDescription="@string/todo" />
    </LinearLayout>
</LinearLayout>
