<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="technicalhub.io.purshotam.adityahostelapp.ChangePassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp"
        android:layout_above="@id/stripActivityAlerts">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <EditText
                android:id="@+id/old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_background"
                android:padding="5dp"
                android:hint="@string/old_password"
                android:textAlignment="center"
                android:inputType="textPassword"/>
            <TextView
                android:id="@+id/show_old_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:visibility="gone"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <EditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_background"
                android:padding="5dp"
                android:hint="@string/new_password"
                android:textAlignment="center"
                android:inputType="textPassword"/>
            <TextView
                android:id="@+id/show_new_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:visibility="gone"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">
            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_background"
                android:padding="5dp"
                android:hint="@string/confirm_password"
                android:textAlignment="center"
                android:inputType="textPassword"/>

            <TextView
                android:id="@+id/show_confirm_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:visibility="gone"/>
        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_background"
            android:text="@string/change"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:onClick="changePassword"/>

    </LinearLayout>

    <!-- Bottom strip -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/stripActivityAlerts"
        android:orientation="horizontal"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:layout_alignParentBottom="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/made_with"
            android:textSize="16sp"
            android:textColor="@color/white" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/love"
            android:padding="5dp"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by"
            android:textSize="16sp"
            android:textColor="@color/white" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/thubActivityAlerts"
            android:src="@drawable/thub"
            android:contentDescription="@string/todo" />
    </LinearLayout>

</RelativeLayout>
