<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="technicalhub.io.purshotam.adityahostelapp.LoginPage">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/aditya_logo"
            android:layout_centerInParent="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="20sp"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:textColor="@color/black"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <EditText
            android:id="@+id/reg_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registration_number"
            android:layout_alignParentBottom="true"
            android:textAlignment="center"
            android:padding="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/et_background"
            android:maxLength="10"
            android:inputType="textCapCharacters"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/et_background"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textAlignment="center" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show"
            android:layout_centerInParent="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:id="@+id/show_password"
            android:visibility="gone"/>
    </RelativeLayout>




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">
        <CheckBox
            android:id="@+id/stay_logged_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stay_logged_in"
            android:layout_marginLeft="20dp"/>
        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_background"
            android:layout_centerInParent="true"
            android:onClick="Login"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_below="@id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/new_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New user"
                android:textStyle="italic"
                android:textColor="@color/black"
                android:onClick="NewUser"
                android:textSize="15sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="  |  "
                android:textColor="@color/black"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Forgot password"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:onClick="ForgotPassword"/>
        </LinearLayout>

    </RelativeLayout>

    <!-- Bottom strip -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/stripActivityAlerts"
        android:orientation="horizontal"
        android:background="@color/colorAccent"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/made_with"
            android:textSize="16sp"
            android:textColor="@color/white" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/love"
            android:padding="5dp"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by"
            android:textSize="16sp"
            android:textColor="@color/white" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/thubActivityAlerts"
            android:src="@drawable/thub"
            android:contentDescription="@string/todo" />
    </LinearLayout>
</LinearLayout>
