<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_photo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/profile"
            android:layout_centerInParent="true"
            android:clickable="true"
            android:focusable="true" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/edit_button"
            android:layout_alignRight="@+id/profile_photo"
            android:layout_alignBottom="@id/profile_photo"
            android:contentDescription="@string/todo"
            android:layout_alignEnd="@+id/profile_photo"
            android:onClick="ChangeProfilePhoto"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/name"
        android:textSize="15sp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/profile_regNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_number"
        android:textSize="13sp"
        android:layout_marginTop="4dp"
        android:textColor="@color/white"/>

</LinearLayout>
